--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -102,7 +102,7 @@ jobs:
         run: |
           echo "🔍 Linting Go code..."
           export PATH="${{ github.workspace }}/bin:$PATH"
-          timeout 3m make lint || echo "⚠️ Linting timed out or had issues (non-blocking)"
+          timeout 4m make lint || echo "⚠️ Linting timed out or had issues (non-blocking)"
         continue-on-error: true  # Don't block CI for lint warnings in V1.0
 
   lint-python:
@@ -280,6 +280,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25'
+          cache: true
+
+      - name: Generate required files
+        run: |
+          echo "🔄 Generating OpenAPI specs and required files for Docker builds..."
+          export PATH="${{ github.workspace }}/bin:$PATH"
+          make generate
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
