--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -2,8 +2,7 @@ name: CI Pipeline
 
 # 4-Stage CI Pipeline with Registry-Aware Image Reuse
 #
-# Stage 1A: Lint (parallel: Go + Python) ~1 min
-# Stage 1B: Unit Tests (parallel matrix: 9 services) ~2 min
+# Stage 1: Lint & Unit Tests (parallel: 2 lint + 9 unit test jobs) ~2 min
 # Stage 2: Build & Push Images (parallel matrix: 10 images) ~5 min
 # Stage 3: Integration Tests (parallel matrix: 9 services) ~15 min
 # Stage 4: E2E Tests (parallel jobs: 8 services, when enabled) ~30 min each
@@ -71,8 +70,8 @@ env:
 
 jobs:
   # ========================================
-  # STAGE 1A: LINT (PARALLEL)
-  # Two parallel jobs (~1 min total)
+  # STAGE 1: LINT & UNIT TESTS (ALL PARALLEL)
+  # 11 parallel jobs (2 lint + 9 unit tests) ~2 min total
   # Note: Code compilation happens in Stage 2 (image builds)
   # ========================================
 
@@ -135,15 +134,9 @@ jobs:
           make lint-holmesgpt-api
         continue-on-error: true  # Don't block CI for lint warnings in V1.0
 
-  # ========================================
-  # STAGE 1B: UNIT TESTS (PARALLEL)
-  # Matrix job, 8 services in parallel (~2 min)
-  # ========================================
-
   unit-tests:
     name: Unit Tests (${{ matrix.service }})
     runs-on: ubuntu-latest
-    needs: [lint-go, lint-python]
     timeout-minutes: 5
     strategy:
       fail-fast: false
@@ -472,12 +465,10 @@ jobs:
           echo "Defense-in-Depth Test Suite Summary (Optimized + Parallel)"
           echo "═══════════════════════════════════════════════════════════"
           echo ""
-          echo "STAGE 1A - Lint (Parallel):"
-          echo "  Go Services:    ${{ needs.lint-go.result }}"
-          echo "  Python Services: ${{ needs.lint-python.result }}"
-          echo ""
-          echo "STAGE 1B - Unit Tests (Parallel Matrix):"
-          echo "  Unit Tests: ${{ needs.unit-tests.result }}"
+          echo "STAGE 1 - Lint & Unit Tests (All Parallel):"
+          echo "  Lint (Go):       ${{ needs.lint-go.result }}"
+          echo "  Lint (Python):   ${{ needs.lint-python.result }}"
+          echo "  Unit Tests (9):  ${{ needs.unit-tests.result }}"
           echo ""
           echo "STAGE 2 - Build & Push Images (Parallel Matrix):"
           echo "  All Images (10 services): ${{ needs.build-and-push-images.result }}"
@@ -494,9 +485,8 @@ jobs:
           echo "  ✅ Sequential stages ensure images ready before use"
           echo ""
           echo "Optimizations:"
-          echo "  ✅ Parallel lint (Go + Python)"
+          echo "  ✅ Stage 1: All parallel (2 lint + 9 unit tests)"
           echo "  ✅ No redundant builds (code compiled once in image builds)"
-          echo "  ✅ Parallel unit tests (matrix: 9 services)"
           echo "  ✅ Parallel image builds & push to ghcr.io (matrix: 10 images)"
           echo "  ✅ Integration tests reuse registry images (saves ~60% disk, ~30% time)"
           echo "  ✅ Parallel integration tests (matrix: 9 services)"
