fix(datastorage): Add AsyncAcceptanceResponse for 202 status codes
Root cause: OpenAPI spec mismatch with actual async acceptance response.

Problem:
- DataStorage returns 202 Accepted when database fails (DD-009: DLQ fallback)
- Response body: {"status":"accepted","message":"audit event queued..."}
- OpenAPI spec defined 202 as AuditEventResponse (requires event_id + event_timestamp)
- Generated client expected event_id field that doesn't exist in async response
- E2E tests failed with: "event_id (field required), event_timestamp (field required)"

Solution:
1. Add new AsyncAcceptanceResponse schema (status + message fields)
2. Update 202 response in /audit-events POST to use AsyncAcceptanceResponse
3. Regenerate ogen client code (creates proper type checking)
4. Update E2E tests to handle both response types:
   - 201 Created → AuditEventResponse (has event_id)
   - 202 Accepted → AsyncAcceptanceResponse (no event_id, use correlation_id)

Files changed:
- api/openapi/data-storage-v1.yaml: Added AsyncAcceptanceResponse schema
- pkg/datastorage/server/middleware/openapi_spec_data.yaml: Same change (copy)
- pkg/datastorage/ogen-client/: Regenerated client code
- test/e2e/datastorage/23_sar_access_control_test.go: Handle both response types
- test/e2e/datastorage/05_soc2_compliance_test.go: Handle both response types
- test/e2e/datastorage/helpers.go: Update createAuditEventOpenAPI() and postAuditEvent()

Impact:
- Fixes DataStorage E2E SAR test failure (188/189 → 189/189)
- Tests now correctly handle async DLQ fallback scenarios
- OpenAPI spec matches actual server behavior

Authority: DD-009 (DLQ fallback architecture)
Related: BR-STORAGE-033 (Unified audit trail)

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -399,11 +399,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/AuditEventResponse'
         '202':
-          description: Database write failed, queued to DLQ
+          description: Database write failed, queued to DLQ for async processing
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AuditEventResponse'
+                $ref: '#/components/schemas/AsyncAcceptanceResponse'
         '400':
           description: Validation error
           content:
@@ -1740,6 +1740,22 @@ components:
             format: uuid
         message:
           type: string
+
+    AsyncAcceptanceResponse:
+      type: object
+      description: Response when audit event is queued for async processing (202 Accepted)
+      required:
+        - status
+        - message
+      properties:
+        status:
+          type: string
+          description: Status of the async operation
+          example: "accepted"
+        message:
+          type: string
+          description: Explanation of the async processing
+          example: "audit event queued for async processing"
 
     AuditEventsQueryResponse:
       type: object
