fix(e2e): Fix Notification and SignalProcessing infrastructure issues
Two fixes for E2E test failures:

1. Notification: Fix Kind cluster creation failure
   Root cause: Using default Kind image v1.34.0 (has bootstrap issues with Podman)
   Solution: Pin to kindest/node:v1.27.3 (proven stable)
   Error: "expected one control plane node or a load balancer, not 0 and none"
   Expected: 0/30 → 24-30/30 tests passing

2. SignalProcessing: Fix BR-SP-090 audit trail test
   Root cause: DATA_STORAGE_URL pointing to wrong service name
   Was: http://datastorage.kubernaut-system.svc.cluster.local:8080
   Now: http://data-storage-service.kubernaut-system.svc.cluster.local:8080
   Impact: Controller can now reach DataStorage to emit audit events
   Expected: 26/27 → 27/27 (100%)

Files changed:
- test/infrastructure/kind-notification-config.yaml: Added explicit Kind image version
- test/infrastructure/signalprocessing_e2e_hybrid.go: Fixed DataStorage service name

Authority: DD-TEST-001 (E2E test infrastructure)
Related: Same DNS fix pattern as RemediationOrchestrator, WorkflowExecution

--- a/test/infrastructure/kind-notification-config.yaml
+++ b/test/infrastructure/kind-notification-config.yaml
@@ -2,6 +2,11 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
+  # Pin to stable Kind node version (v1.27.3)
+  # Default (v1.34.0) has bootstrap issues with Podman
+  # Matches DataStorage, Gateway, other working services
+  image: kindest/node:v1.27.3
+  
   # Expose Notification Controller metrics via NodePort to host machine
   # This eliminates kubectl port-forward instability for E2E tests
   # Using 8081 on host (gateway uses 8080) - proven port pattern
