feat(ci): Enable E2E tests to run after integration tests pass
Uncomment and fully implement E2E tests as Stage 4 of the CI pipeline.
E2E tests now run after integration tests pass, providing comprehensive
end-to-end validation of all services.

Changes:
- Uncommented e2e-tests job with full implementation
- Changed dependency: needs [integration-tests] (runs after INT pass)
- Added complete matrix: 9 services (same as integration tests)
- Configured timeouts: 35-45 min per service (E2E are slower)
- Registry-aware: Pull service images from ghcr.io (Stage 2)
- Added Kind cluster setup (required for E2E tests)
- Added Python setup for holmesgpt-api E2E tests
- Added must-gather collection on failure
- Added cleanup for Kind clusters and containers

Pipeline flow:
- Stage 1: Lint & Unit Tests (parallel)
- Stage 2: Build & Push Images
- Stage 3: Integration Tests (parallel matrix, 9 services)
- Stage 4: E2E Tests (parallel matrix, 9 services) ← NEW
- Summary: Reports all stage results

Benefits:
- Comprehensive validation with full user journey tests
- Fast feedback: E2E only run if integration tests pass
- Resource efficient: Reuse images from ghcr.io
- Parallel execution: All 9 E2E tests run simultaneously
- Fail-safe: Matrix fail-fast: false for complete feedback

Time: ~30-45 minutes for E2E stage (parallel execution)

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -432,20 +432,128 @@ jobs:
         if: always()
         run: podman ps -a --filter "name=${{ matrix.service }}-" --format "{{.Names}}" | xargs -r podman rm -f
   # ========================================
-  # SUMMARY
+  # STAGE 4: E2E TESTS (PARALLEL)
+  # Matrix job, 9 services in parallel (~30 min each)
+  # 
+  # Test Coverage:
+  #   - 8 Go services: signalprocessing, aianalysis, authwebhook, workflowexecution,
+  #     remediationorchestrator, notification, gateway, datastorage
+  #   - 1 Go+Python hybrid: holmesgpt-api (Go infrastructure, Python tests)
+  # 
+  # CI/CD Optimization:
+  #   - Pulls service images from ghcr.io (built in Stage 2)
+  #   - Fallback to local build if registry pull fails
+  #   - Saves ~60% disk space and ~30% build time
+  #
+  # DESIGN DECISION: Runs after integration tests pass
+  # - E2E tests are slower (30 min each) and more resource-intensive
+  # - Integration tests validate core functionality first (faster feedback)
+  # - E2E tests validate full user journeys and cross-service scenarios
   # ========================================
-  # ========================================
-  # STAGE 4: E2E TESTS (TODO - Not yet enabled)
-  # E2E tests will use images from ghcr.io (built in Stage 2)
-  # This saves ~60% disk space on GitHub Actions runners
-  # ========================================
-  # e2e-tests:
-  #   name: E2E (${{ matrix.service }})
-  #   needs: [build-and-push-images]
-  #   env:
-  #     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}/kubernaut
-  #     IMAGE_TAG: ${{ needs.build-and-push-images.outputs.tag }}
-  #   ...
+
+  e2e-tests:
+    name: E2E (${{ matrix.service }})
+    needs: [build-and-push-images, integration-tests]  # Need image tag + wait for integration
+    runs-on: ubuntu-latest
+    timeout-minutes: ${{ matrix.timeout }}
+    env:
+      IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}/kubernaut
+      IMAGE_TAG: ${{ needs.build-and-push-images.outputs.tag }}
+    strategy:
+      fail-fast: false
+      matrix:
+        service: [signalprocessing, aianalysis, authwebhook, workflowexecution, remediationorchestrator, notification, gateway, datastorage, holmesgpt-api]
+        include:
+          - service: signalprocessing
+            service_name: "Signal Processing"
+            timeout: 35
+          - service: aianalysis
+            service_name: "AI Analysis"
+            timeout: 40
+          - service: authwebhook
+            service_name: "Auth Webhook"
+            timeout: 35
+          - service: workflowexecution
+            service_name: "Workflow Execution"
+            timeout: 40
+          - service: remediationorchestrator
+            service_name: "Remediation Orchestrator"
+            timeout: 40
+          - service: notification
+            service_name: "Notification"
+            timeout: 35
+          - service: gateway
+            service_name: "Gateway"
+            timeout: 45
+          - service: datastorage
+            service_name: "Data Storage"
+            timeout: 35
+          - service: holmesgpt-api
+            service_name: "HolmesGPT API"
+            timeout: 35
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true  # CRITICAL: holmesgpt is a submodule required for HAPI builds
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.25'
+      - name: Generate OpenAPI specs
+        run: make generate
+      - name: Install Podman
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y podman
+      - name: Install Kind
+        run: |
+          curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.20.0/kind-linux-amd64
+          chmod +x ./kind
+          sudo mv ./kind /usr/local/bin/kind
+      - name: Setup Python (for holmesgpt-api E2E)
+        if: matrix.service == 'holmesgpt-api'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
+          cache-dependency-path: 'holmesgpt-api/requirements*.txt'
+      - name: Install Python dependencies (for holmesgpt-api E2E)
+        if: matrix.service == 'holmesgpt-api'
+        working-directory: holmesgpt-api
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-test.txt
+      - name: Run ${{ matrix.service }} E2E tests
+        run: make test-e2e-${{ matrix.service }}
+      - name: Collect must-gather logs on failure
+        if: failure()
+        run: |
+          echo "📋 Collecting must-gather logs for triage..."
+          if [ -d "/tmp/kubernaut-must-gather" ]; then
+            echo "✅ Found must-gather directory"
+            ls -la /tmp/kubernaut-must-gather/
+            # Create timestamped archive for this service
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            tar -czf must-gather-e2e-${{ matrix.service }}-${TIMESTAMP}.tar.gz -C /tmp kubernaut-must-gather/
+            echo "✅ Created must-gather archive: must-gather-e2e-${{ matrix.service }}-${TIMESTAMP}.tar.gz"
+          else
+            echo "⚠️  No must-gather directory found at /tmp/kubernaut-must-gather"
+            echo "    This may be expected if tests failed before must-gather was triggered"
+          fi
+      - name: Upload must-gather logs as artifacts
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: must-gather-logs-e2e-${{ matrix.service }}-${{ github.run_id }}
+          path: must-gather-e2e-*.tar.gz
+          retention-days: 14
+          if-no-files-found: warn
+      - name: Cleanup Kind cluster
+        if: always()
+        run: kind delete cluster --name kubernaut-e2e || true
+      - name: Cleanup containers
+        if: always()
+        run: podman ps -a --filter "name=${{ matrix.service }}-" --format "{{.Names}}" | xargs -r podman rm -f
 
   # ========================================
   # SUMMARY
@@ -454,7 +562,7 @@ jobs:
     name: Test Suite Summary
     needs: [
       lint-go, lint-python, unit-tests,
-      build-and-push-images, integration-tests
+      build-and-push-images, integration-tests, e2e-tests
     ]
     if: always()
     runs-on: ubuntu-latest
@@ -478,6 +586,10 @@ jobs:
           echo "  All Services (9 services):  ${{ needs.integration-tests.result }}"
           echo "  Image Strategy: Pull from ghcr.io (DataStorage, HAPI, Mock LLM)"
           echo ""
+          echo "STAGE 4 - E2E Tests (Parallel Matrix):"
+          echo "  All Services (9 services):  ${{ needs.e2e-tests.result }}"
+          echo "  Image Strategy: Pull from ghcr.io (all service images)"
+          echo ""
           echo "═══════════════════════════════════════════════════════════"
           echo "Test Strategy:"
           echo "  ✅ ALL tests run for every non-draft PR"
@@ -490,8 +602,9 @@ jobs:
           echo "  ✅ Parallel image builds & push to ghcr.io (matrix: 10 images)"
           echo "  ✅ Integration tests reuse registry images (saves ~60% disk, ~30% time)"
           echo "  ✅ Parallel integration tests (matrix: 9 services)"
+          echo "  ✅ E2E tests reuse registry images (saves ~60% disk, ~30% time)"
+          echo "  ✅ Parallel E2E tests (matrix: 9 services)"
           echo "  ✅ Automatic fallback to local build if registry pull fails"
-          echo "  ⏭️  E2E tests temporarily disabled (will use ghcr.io images when enabled)"
           echo "═══════════════════════════════════════════════════════════"
 
           # Check for lint failure (non-blocking, but report)
@@ -527,6 +640,18 @@ jobs:
             echo "   Services tested: signalprocessing, aianalysis, workflowexecution,"
             echo "                    remediationorchestrator, gateway, datastorage,"
             echo "                    notification, holmesgpt-api"
+            exit 1
+          fi
+
+          # Check for E2E tests failure (matrix job)
+          # Note: e2e-tests is a single matrix job that runs 9 services
+          # GitHub Actions reports the matrix job result as a whole (fail-fast: false)
+          if [ "${{ needs.e2e-tests.result }}" != "success" ]; then
+            echo ""
+            echo "❌ E2E tests failed - check individual service logs in the matrix"
+            echo "   Services tested: signalprocessing, aianalysis, workflowexecution,"
+            echo "                    remediationorchestrator, gateway, datastorage,"
+            echo "                    notification, authwebhook, holmesgpt-api"
             exit 1
           fi
 
