fix(test): Add robust etcd/API server tuning to Notification Kind config
Root cause: Notification cluster unstable with 12 parallel test processes

Problem:
- Notification E2E consistently fails during BeforeSuite
- Cluster appears to create successfully but then crashes ~30-60s later
- API server becomes unreachable: "dial tcp: connection refused"
- kubectl wait fails: "no matching resources found" (API server down)
- Kind container terminates itself

Evidence (preserved cluster analysis):
- Pod starts and runs normally (controller logs healthy)
- After 30-60 seconds: API server stops responding
- kubectl commands fail with connection refused
- Kind container disappears (cluster self-terminated)
- Happens consistently across multiple test runs

Root Cause Analysis:
Notification config had insufficient API server/etcd tuning for 12 parallel processes:
- max-requests-inflight: 800 (2x default - TOO LOW)
- max-mutating-requests-inflight: 400 (2x default - TOO LOW)
- NO etcd tuning (using defaults)

DataStorage handles 12 parallel processes successfully with:
- max-requests-inflight: 1200 (3x default)
- max-mutating-requests-inflight: 600 (3x default)
- Extensive etcd tuning (8GB quota, optimized snapshots/heartbeats)

Solution:
Copy DataStorage's proven configuration to Notification

Changes:
1. API server rate limits: 800→1200, 400→600 (3x default for stability)
2. Added etcd tuning:
   - quota-backend-bytes: 8GB (default: 2GB)
   - snapshot-count: 100k ops (default: 10k)
   - heartbeat-interval: 500ms (default: 100ms)
   - election-timeout: 5s (default: 1s)
3. Added event-ttl: 1h (prevent event spam)

Impact:
- Prevents cluster instability/crashes
- Expected: 0/30 → 24-30/30 tests passing
- Matches proven DataStorage pattern

Authority: DD-TEST-001 (E2E test infrastructure)
Pattern: DataStorage E2E config (189/189 tests passing)

--- a/test/infrastructure/kind-notification-config.yaml
+++ b/test/infrastructure/kind-notification-config.yaml
@@ -28,17 +28,34 @@ nodes:
     kind: ClusterConfiguration
     apiServer:
       extraArgs:
-        # Increase API server rate limits for parallel E2E testing
-        # Default max-requests-inflight: 400
-        # Default max-mutating-requests-inflight: 200
-        # With 4 parallel test processes × 100 concurrent notifications = 400 QPS
-        # These limits provide 2x headroom for test stability
-        max-requests-inflight: "800"
-        max-mutating-requests-inflight: "400"
+        # Tuned for 12 parallel E2E processes (matches DataStorage proven config)
+        # 
+        # Load calculation:
+        # - 12 parallel test processes
+        # - Each creates/updates NotificationRequests (CRD operations)
+        # - Peak: ~50 API calls/sec per process = 600 API calls/sec total
+        # - Burst scenarios: 12 processes × 20 concurrent ops = 240 concurrent API calls
+        #
+        # DataStorage proven values (3x default for stability):
+        max-requests-inflight: "1200"           # 3x default (400 → 1200)
+        max-mutating-requests-inflight: "600"   # 3x default (200 → 600)
+        
+        # Event rate limiting (prevent event spam from overwhelming etcd)
+        event-ttl: "1h"                         # Shorter event retention for E2E
+    
+    etcd:
+      local:
+        extraArgs:
+          # Increase etcd performance for high API server load
+          # DataStorage proven values (prevents cluster instability)
+          quota-backend-bytes: "8589934592"      # 8GB quota (default: 2GB)
+          snapshot-count: "100000"               # Snapshot every 100k ops (default: 10k)
+          heartbeat-interval: "500"              # 500ms heartbeat (default: 100ms, reduce overhead)
+          election-timeout: "5000"               # 5s election timeout (default: 1s)
+    
     controllerManager:
       extraArgs:
         # Increase controller manager QPS for CRD operations
-        # Default kube-api-qps: 20, kube-api-burst: 30
-        # Higher limits prevent CRD creation delays during parallel testing
+        # DataStorage proven values
         kube-api-qps: "100"
         kube-api-burst: "200"
