fix(ro): Enable CRD selectableFields with Kubernetes 1.34 upgrade
**ROOT CAUSE**: RemediationOrchestrator integration tests failing with:
"field label not supported: spec.signalFingerprint"

**EVIDENCE** (CI Run 21557578230):
```
Field Index Smoke Test:
  ❌ field label not supported: spec.signalFingerprint

Notification Labels and Correlation Test:
  ❌ field label not supported: spec.signalFingerprint

CRD Definition (kubernaut.ai_remediationrequests.yaml):
  # selectableFields removed for Kubernetes 1.27.3 compatibility (E2E tests)
  # Feature requires Kubernetes 1.30+ (not available in kindest/node:v1.27.3)
  # selectableFields:
  # - jsonPath: .spec.signalFingerprint
```

**WHY IT WAS COMMENTED OUT**:
CRD selectableFields is a Kubernetes 1.30+ feature that enables server-side
field selectors on custom spec fields. Tests were using Kind 1.27.3, which
doesn't support this feature.

**THE ISSUE**:
Tests use `k8sManager.GetAPIReader().List()` with `MatchingFields{"spec.signalFingerprint": ...}`.
GetAPIReader() bypasses cache and queries API server directly, requiring
server-side field selector support (CRD selectableFields).

Without selectableFields:
- Client-side field indexing (mgr.GetFieldIndexer()) only works with cached client
- API reader queries fail with "field label not supported"

**THE SOLUTION**: Upgrade Kind to Kubernetes 1.34

**Changes**:
1. **Kind Config** (kind-datastorage-config.yaml, kind-notification-config.yaml):
   - Upgraded: kindest/node:v1.27.3 → kindest/node:v1.34.0
   - Rationale: Matches project's k8s.io/api v0.34.1

2. **CRD** (kubernaut.ai_remediationrequests.yaml):
   - Uncommented selectableFields:
     ```yaml
     selectableFields:
     - jsonPath: .spec.signalFingerprint
     ```

3. **Documentation** (README.md):
   - Updated minimum K8s version: v1.24+ → v1.30+
   - Added note: "v1.30+ required for CRD selectableFields support"

4. **Test Updates**:
   - field_index_smoke_test.go: Restored GetAPIReader() (now works with selectabl

--- a/config/crd/bases/kubernaut.ai_remediationrequests.yaml
+++ b/config/crd/bases/kubernaut.ai_remediationrequests.yaml
@@ -963,11 +963,10 @@ spec:
                 x-kubernetes-map-type: atomic
             type: object
         type: object
-    # selectableFields removed for Kubernetes 1.27.3 compatibility (E2E tests)
-    # Feature requires Kubernetes 1.30+ (not available in kindest/node:v1.27.3)
-    # TODO: Re-enable when upgrading to Kubernetes 1.30+ for E2E testing
-    # selectableFields:
-    # - jsonPath: .spec.signalFingerprint
+    # selectableFields enabled with Kubernetes 1.34 (upgraded from 1.27.3)
+    # Feature requires Kubernetes 1.30+ (now available in kindest/node:v1.34.0)
+    selectableFields:
+    - jsonPath: .spec.signalFingerprint
     served: true
     storage: true
     subresources:
