--- a/test/infrastructure/kind-datastorage-config.yaml
+++ b/test/infrastructure/kind-datastorage-config.yaml
@@ -5,7 +5,7 @@ nodes:
   # DD-AUTH-014: Allocate more resources for API server under SAR middleware load
   # SAR middleware adds 2 K8s API calls per HTTP request (TokenReview + SAR)
   # With 12 parallel test processes, API server needs more CPU/memory
-  image: kindest/node:v1.27.3  # Explicit version for reproducibility
+  image: kindest/node:v1.34.0  # Upgraded to K8s 1.34 for CRD selectableFields support (requires 1.30+)
   
   # Expose Data Storage NodePort to host machine
   # This eliminates kubectl port-forward instability
