--- a/test/infrastructure/kind-notification-config.yaml
+++ b/test/infrastructure/kind-notification-config.yaml
@@ -2,10 +2,9 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
-  # Pin to stable Kind node version (v1.27.3)
-  # Default (v1.34.0) has bootstrap issues with Podman
-  # Matches DataStorage, Gateway, other working services
-  image: kindest/node:v1.27.3
+  # Upgraded to K8s 1.34 for CRD selectableFields support (requires 1.30+)
+  # Matches project's k8s.io/api v0.34.1
+  image: kindest/node:v1.34.0
   
   # Expose Notification Controller metrics via NodePort to host machine
   # This eliminates kubectl port-forward instability for E2E tests
