--- a/test/infrastructure/kind-datastorage-config.yaml
+++ b/test/infrastructure/kind-datastorage-config.yaml
@@ -5,7 +5,7 @@ nodes:
   # DD-AUTH-014: Allocate more resources for API server under SAR middleware load
   # SAR middleware adds 2 K8s API calls per HTTP request (TokenReview + SAR)
   # With 12 parallel test processes, API server needs more CPU/memory
-  image: kindest/node:v1.34.0  # Upgraded to K8s 1.34 for CRD selectableFields support (requires 1.30+)
+  image: kindest/node:v1.34.3@sha256:08497ee19eace7b4b5348db5c6a1591d7752b164530a36f855cb0f2bdcbadd48  # Latest K8s 1.34.x with CRD selectableFields support (requires 1.30+)
   
   # Expose Data Storage NodePort to host machine
   # This eliminates kubectl port-forward instability
