--- a/test/infrastructure/kind-notification-config.yaml
+++ b/test/infrastructure/kind-notification-config.yaml
@@ -2,9 +2,9 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
-  # Upgraded to K8s 1.34 for CRD selectableFields support (requires 1.30+)
-  # Matches project's k8s.io/api v0.34.1
-  image: kindest/node:v1.34.0
+  # Upgraded to K8s 1.34.3 (latest z-stream) for CRD selectableFields support (requires 1.30+)
+  # Matches project's k8s.io/api v0.34.1, pinned with digest for reproducibility
+  image: kindest/node:v1.34.3@sha256:08497ee19eace7b4b5348db5c6a1591d7752b164530a36f855cb0f2bdcbadd48
   
   # Expose Notification Controller metrics via NodePort to host machine
   # This eliminates kubectl port-forward instability for E2E tests
