--- a/test/infrastructure/kind-signalprocessing-config.yaml
+++ b/test/infrastructure/kind-signalprocessing-config.yaml
@@ -21,6 +21,7 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
+  image: kindest/node:v1.34.3@sha256:08497ee19eace7b4b5348db5c6a1591d7752b164530a36f855cb0f2bdcbadd48  # K8s 1.34.3 with CRD selectableFields support
   # Expose SignalProcessing Controller ports via NodePort to host machine
   # This eliminates kubectl port-forward instability for E2E tests
   extraPortMappings:
