fix(ci): install Kind v0.30.0 to match E2E test requirements
Root Cause:
- E2E tests enforce Kind v0.30.x version check (kind_cluster_helpers.go)
- CI was attempting to fetch "latest" Kind but getting v0.20.0
- Version mismatch caused all E2E tests to fail with validation error

Changes:
- .github/workflows/e2e-test-template.yml:
  * Explicitly install Kind v0.30.0 instead of "latest"
  * Updated step name from "Install Latest Kind" → "Install Kind v0.30.0"
  * Added authority reference to kind_cluster_helpers.go

- .github/workflows/integration-test-template.yml:
  * Same Kind v0.30.0 installation fix
  * Ensures consistency across INT and E2E environments

Error Message (Before Fix):
  "kind version mismatch: expected v0.30.x, got: kind v0.20.0 go1.20.4 linux/amd64"

Authority:
- test/infrastructure/kind_cluster_helpers.go:79-85 (version validation)
- test/infrastructure/kind_cluster_helpers.go:298-304 (duplicate check)

Expected Result: All E2E tests will pass version validation

--- a/.github/workflows/integration-test-template.yml
+++ b/.github/workflows/integration-test-template.yml
@@ -51,16 +51,17 @@ jobs:
           sudo apt-get install -y podman
           podman --version
 
-      - name: Install Latest Kind
+      - name: Install Kind v0.30.0
         if: inputs.infrastructure == 'kind'
         run: |
-          # Install latest Kind release
-          LATEST_KIND_VERSION=$(curl -sL https://api.github.com/repos/kubernetes-sigs/kind/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-          echo "Installing Kind version: ${LATEST_KIND_VERSION}"
-          curl -Lo ./kind "https://kind.sigs.k8s.io/dl/${LATEST_KIND_VERSION}/kind-linux-amd64"
+          # Install Kind v0.30.0 (required by integration test infrastructure)
+          # Authority: test/infrastructure/kind_cluster_helpers.go (version validation)
+          KIND_VERSION="v0.30.0"
+          echo "Installing Kind version: ${KIND_VERSION}"
+          curl -Lo ./kind "https://kind.sigs.k8s.io/dl/${KIND_VERSION}/kind-linux-amd64"
           chmod +x ./kind
           sudo mv ./kind /usr/local/bin/kind
-          kind --version
+          kind version
 
       - name: Set up Python
         if: inputs.service == 'holmesgpt'
