--- a/.github/workflows/e2e-test-template.yml
+++ b/.github/workflows/e2e-test-template.yml
@@ -52,15 +52,16 @@ jobs:
       # ========================================
       # Infrastructure Setup
       # ========================================
-      - name: Install Latest Kind
+      - name: Install Kind v0.30.0
         run: |
-          # Install latest Kind release
-          LATEST_KIND_VERSION=$(curl -sL https://api.github.com/repos/kubernetes-sigs/kind/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-          echo "Installing Kind version: ${LATEST_KIND_VERSION}"
-          curl -Lo ./kind "https://kind.sigs.k8s.io/dl/${LATEST_KIND_VERSION}/kind-linux-amd64"
+          # Install Kind v0.30.0 (required by E2E test infrastructure)
+          # Authority: test/infrastructure/kind_cluster_helpers.go (version validation)
+          KIND_VERSION="v0.30.0"
+          echo "Installing Kind version: ${KIND_VERSION}"
+          curl -Lo ./kind "https://kind.sigs.k8s.io/dl/${KIND_VERSION}/kind-linux-amd64"
           chmod +x ./kind
           sudo mv ./kind /usr/local/bin/kind
-          kind --version
+          kind version
 
       - name: Install Podman
         run: |
