fix(e2e): standardize image building with registry pull fallback + coverage
Root Cause Analysis:
1. Gateway/AuthWebhook used custom build functions (no registry pull attempt)
2. E2E tests disabled IMAGE_REGISTRY to avoid 403 errors (wrong approach)
3. Coverage instrumentation not enabled globally (E2E_COVERAGE missing)
4. No coverage artifacts uploaded or summarized in CI

Problems Fixed:
❌ "Trying to pull ...pr-24: 403 Forbidden" → ✅ Expected behavior, fallback works
❌ Gateway building instead of pulling → ✅ Now uses BuildImageForKind()
❌ No E2E coverage data → ✅ E2E_COVERAGE=true + artifact upload
❌ DataStorage coverdata path error → ✅ os.MkdirAll() before extraction

Changes:

1. test/e2e/datastorage/datastorage_e2e_suite_test.go:
   - Added os.MkdirAll(coverDir, 0755) before coverage extraction
   - Fixes "statfs: no such file or directory" error

2. .github/workflows/ci-pipeline.yml:
   - Restored IMAGE_REGISTRY + IMAGE_TAG for registry pull attempts
   - Added E2E_COVERAGE=true for all E2E tests
   - Added coverage summary generation step (go tool covdata percent)
   - Added coverage artifact upload (14-day retention)
   - Updated comments to reflect pull-first-fallback strategy

3. test/infrastructure/gateway_e2e.go:
   - Refactored SetupGatewayInfrastructureParallel() to use BuildImageForKind()
   - Removed custom buildGatewayImageOnly() usage
   - Gateway now attempts registry pull before local build

4. test/infrastructure/authwebhook_e2e.go:
   - Refactored SetupAuthWebhookInfrastructureParallel() to use BuildImageForKind()
   - Removed custom buildAuthWebhookImageOnly() usage
   - AuthWebhook now attempts registry pull before local build

Image Building Strategy (ALL E2E Services):
✅ SignalProcessing - Already uses BuildImageForKind()
✅ AIAnalysis - Already uses BuildImageForKind()
✅ RemediationOrchestrator - Already uses BuildImageForKind()
✅ Notification - Already uses BuildImageForKind()
✅ WorkflowExecution - Already uses BuildImageForKind()
✅ Gateway

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -461,10 +461,10 @@ jobs:
   #     remediationorchestrator, notification, gateway, datastorage
   #   - 1 Go+Python hybrid: holmesgpt-api (Go infrastructure, Python tests)
   # 
-  # CI/CD Optimization:
-  #   - Pulls service images from ghcr.io (built in Stage 2)
-  #   - Fallback to local build if registry pull fails
-  #   - Saves ~60% disk space and ~30% build time
+  # Image Strategy:
+  #   - E2E tests attempt registry pull first (fast path, ~30% time savings)
+  #   - Fallback to local build on 403/failure (with coverage instrumentation)
+  #   - BuildImageForKind() handles this automatically via IMAGE_REGISTRY + IMAGE_TAG
   #
   # DESIGN DECISION: Runs after integration tests pass
   # - E2E tests are slower (30 min each) and more resource-intensive
@@ -478,8 +478,13 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: ${{ matrix.timeout }}
     env:
+      # E2E Image Strategy: Pull from registry first, fallback to local build
+      # - BuildImageForKind() attempts registry pull if IMAGE_REGISTRY + IMAGE_TAG set
+      # - Falls back to local build on 403/failure (with coverage instrumentation)
+      # - Ensures fastest possible E2E execution when registry is accessible
       IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}/kubernaut
       IMAGE_TAG: ${{ needs.build-and-push-images.outputs.tag }}
+      E2E_COVERAGE: true  # Enable coverage instrumentation for local builds (GOFLAGS=-cover)
     strategy:
       fail-fast: false
       matrix:
@@ -550,6 +555,25 @@ jobs:
           pip install -r requirements-test.txt
       - name: Run ${{ matrix.service }} E2E tests
         run: make test-e2e-${{ matrix.service }}
+      - name: Generate E2E coverage summary
+        if: always()
+        run: |
+          echo "📊 Generating E2E coverage summary for ${{ matrix.service }}..."
+          COVERDATA_DIR="test/e2e/${{ matrix.service }}/coverdata"
+          if [ -d "${COVERDATA_DIR}" ] && [ "$(ls -A ${COVERDATA_DIR} 2>/dev/null)" ]; then
+            echo "✅ Found coverage data in ${COVERDATA_DIR}"
+            go tool covdata percent -i="${COVERDATA_DIR}" || echo "⚠️  Coverage report generation failed"
+          else
+            echo "ℹ️  No coverage data found (may be expected for Python-only tests)"
+          fi
+      - name: Upload E2E coverage artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-coverage-${{ matrix.service }}-${{ github.run_id }}
+          path: test/e2e/${{ matrix.service }}/coverdata/**
+          retention-days: 14
+          if-no-files-found: warn
       - name: Collect must-gather logs on failure
         if: failure()
         run: |
