--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -259,16 +259,16 @@ jobs:
             image_name: authwebhook
           - service: notification
             dockerfile: docker/notification-controller-ubi9.Dockerfile
-            image_name: notification
+            image_name: notification-controller  # Match Dockerfile naming convention
           - service: remediationorchestrator
             dockerfile: docker/remediationorchestrator-controller.Dockerfile
-            image_name: remediationorchestrator
+            image_name: remediationorchestrator-controller  # Match Dockerfile naming convention
           - service: signalprocessing
             dockerfile: docker/signalprocessing-controller.Dockerfile
-            image_name: signalprocessing
+            image_name: signalprocessing-controller  # Match Dockerfile naming convention
           - service: workflowexecution
             dockerfile: docker/workflowexecution-controller.Dockerfile
-            image_name: workflowexecution
+            image_name: workflowexecution-controller  # Match Dockerfile naming convention
           # Python Services (1)
           - service: holmesgpt-api
             dockerfile: holmesgpt-api/Dockerfile
